# usagi

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  note  note.md
.github/workflows/: doxygen.yml  test.yml
cmake/: UsagiSkia.cmake
docs/: ui-coordinate-and-drawing.md
include/: geometry.h  scroll.h  stack_content.h  view.h
include/concepts/: view.h
include/effects/: color_blur.h
include/geometry/: point.h  rect.h
include/geometry/point/: function.h  operator.h  point.h
include/geometry/rect/: function.h  operator.h  rect.h
include/usagi/: concepts.h  concepts.hpp  geometry.h  geometry.hpp  graphics.hpp  math.hpp  scroll.h  stack_content.h  tuple.hpp  type.hpp  ui.hpp  usagi.hpp  utility.hpp  variable.h  variable.hpp  view.h
include/usagi/concepts/: app.h  arithmetic.hpp  clickable.h  convertible_to.hpp  floating_point.hpp  geometry.h  geometry.hpp  graphics.hpp  invocable.hpp  is_invocable_f_r_args.hpp  parent_view.h  type.hpp  ui.hpp  view.h
include/usagi/concepts/geometry/: point_concept.h  point_concept.hpp  rect_concept.h  rect_concept.hpp  size_concept.h  size_concept.hpp  transform_concept.hpp
include/usagi/concepts/graphic/: draw_contextable.h
include/usagi/concepts/graphics/: color_concept.h  color_concept.hpp  draw_contextable.h  draw_contextable.hpp
include/usagi/concepts/tuple/: distinct.hpp
include/usagi/concepts/ui/: clickable.h  (+14 more)
include/usagi/geometry/: affine.h  algorithm.h  algorithm.hpp  geometry_traits.h  geometry_traits.hpp  point.h  point.hpp  rect.h  rect.hpp  size.h  size.hpp  transform.hpp
include/usagi/graphics/: color.h  color.hpp
include/usagi/legacy/: concept_wrapper.h
include/usagi/math/: constants.hpp
include/usagi/tuple/: back.hpp  erase.hpp  front.hpp  get_index.hpp  has.hpp  mono.hpp  type_at.hpp
include/usagi/type/: axis.h  axis.hpp  gesture.hpp  mouse.h  mouse.hpp
include/usagi/type_traits/: function_traits.hpp
include/usagi/ui/: AGENTS.md  base_view.hpp  draw_clip.hpp  draw_handler.hpp  draw_transform.hpp  gesture.hpp  gesture_handler.hpp  layered.hpp  stack_view.h  surface.hpp  view.h  view.hpp  view_interface.hpp  view_stack.hpp
include/usagi/utility/: arithmetic.h  arithmetic.hpp  convertible_to.h  convertible_to.hpp  eval_assert.hpp  floating_point.hpp  invocable.hpp  is_invocable_f_r_args.hpp  mono_tuple.h  mono_tuple.hpp  noncopyable.hpp
include/usagi/variable/: variable.h  variable.hpp  variable_traits.h  variable_traits.hpp
include/usagi/wrapper/: icontrol.h
notes/: 20210501.md  20210502.md  20210629.md
static_test/: CMakeLists.txt  main.cpp
static_test/concepts/geometry/: point_concept.cpp  rect_concept.cpp  size_concept.cpp  transform_concept.cpp
static_test/concepts/tuple/: distinct.cpp
static_test/concepts/type/: gestural_parameter.cpp
static_test/concepts/ui/: drawable.cpp  gestural.cpp  transformable.cpp  viewable.cpp
static_test/geometry/: geometry_traits.cpp
static_test/geometry/algorithm/: duplicate.cpp
static_test/geometry/point/: operator.cpp  point.cpp
static_test/geometry/rect/: function.cpp  operator.cpp  rect.cpp
static_test/geometry/size/: function.cpp  operator.cpp  size.cpp
static_test/geometry/transform/: function.cpp  transform.cpp
static_test/graphics/color/: color.cpp
static_test/math/: constants.cpp
static_test/mocks/: draw_context.hpp  drawable.hpp  gestural.hpp  viewable.hpp
static_test/tuple/: back.cpp  erase.cpp  front.cpp  get_index.cpp  has.cpp  mono.cpp  type_at.cpp
static_test/type_traits/: function_traits.cpp
static_test/ui/: base_view.cpp  draw_handler.cpp  gesture.cpp  layered.cpp  surface.cpp  view-common.cpp  view.cpp  view_stack.cpp
static_test/variable/: variable_traits.cpp
test/: CMakeLists.txt  External_GTest.cmake  main.cpp
test/concepts/: clickable.cpp  parent_view.cpp  view.cpp
test/concepts/geometry/: point_concept.cpp  rect_concept.cpp  size_concept.cpp
test/concepts/graphics/: color_concept.cpp  draw_contextable.cpp
test/concepts/ui/: clickable.cpp  contentable.cpp  drawable.cpp  gestural.cpp  viewable.cpp
test/geometry/algorithm/: duplicate.cpp
test/geometry/point/: function.cpp  operator.cpp  point.cpp
test/geometry/rect/: function.cpp  operator.cpp  rect.cpp
test/geometry/size/: function.cpp  operator.cpp  size.cpp
test/geometry/transform/: function.cpp
test/graphics/color/: color.cpp
test/mocks/: clickable.h  clickable.hpp  draw_contextable.h  draw_contextable.hpp  drawable.h  drawable.hpp  gestural.hpp  viewable.h  viewable.hpp
test/ui/: base_view.cpp  gesture.cpp  surface.cpp  view-common.cpp  view-gesture.cpp  view-hierarchy.cpp  view-sub_view.cpp  view.cpp  view_stack.cpp
test/variable/: variable.cpp  variable_traits.cpp
test/wrapper/skia/: draw_clip.cpp  draw_transform.cpp  drawing_helpers.hpp  image_output.cpp  image_output.hpp  view_stack.cpp
(+44 files in other folders)
